[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncorn"
version = "1.0.0"
description = "ASGI web server for FastAPI applications"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "ncorn team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: ASGI Server",
]
dependencies = [
    "annotated-doc>=0.0.4",
    "fastapi>=0.135.2",
    "httptools>=0.5.0",
    "rich>=13.0.0",
]

[project.scripts]
ncorn = "ncorn.main:main"

[project.urls]
Homepage = "https://github.com/ncorn/ncorn"
Repository = "https://github.com/ncorn/ncorn"

[tool.setuptools.packages.find]
where = ["."]
include = ["ncorn*"]

[tool.setuptools.package-data]
ncorn = ["py.typed"]
